javafx added to the project; small update for README.txt